<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小毛驴社区生活网</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty">src</string>
    <string name="home">主页</string>
    <string name="propertr">物业</string>
    <string name="hub">邻里会</string>
    <string name="center">业主中心</string>
    <string name="find_neighbor">邻里动态</string>
    <string name="find_message">消息</string>
    <string name="find_chat">群组</string>
    <string name="find_addressbook">小区通讯录</string>
    <string name="find_shopmanage">店铺管理</string>
    <string name="find_invite">邀请邻居</string>
    <string name="car">购物车</string>
    <string name="location_manage">地址管理</string>
    <string name="recently_view">最近浏览</string>
    <string name="my_favourite">我的收藏</string>
    <string name="mime_assess">我的评价</string>
    <string name="system">设置</string>
    <string name="mime_home_coupon">我的代金券</string>
    <string name="mime_safe">账号与安全</string>
    <string name="welcome">欢迎来到小毛驴社区</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

</resources>