<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffececec"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include layout="@layout/title_bar" />
    
    <TextView
        android:id="@+id/tv_neighbor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tv_bag"
        android:drawableLeft="@drawable/icon_find_neighbor"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/find_neighbor" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_find_message"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/find_message" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="46dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_chat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_find_chat"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/find_chat" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="46dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_addressbook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_find_addressbook"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/find_addressbook" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="46dp"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_shopmanage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tv_bag"
        android:drawableLeft="@drawable/icon_find_shopmanage"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/find_shopmanage" />

    <TextView
        android:id="@+id/tv_invite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tv_bag"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_find_invite"
        android:gravity="center_vertical"
        android:text="@string/find_invite" />

</LinearLayout>